Simple line layout: Paginated content is not painted properly when font overflows line height. https://bugs.webkit.org/show_bug.cgi?id=169516

Reviewed by Antti Koivisto.

Source/WebCore:

adjustLineIndexForStruts should take the IndexType::First/Last into account
when searching for the line index in a paginated context.
This also changes the the computed offset height from m_lineHeight to m_ascent + m_descent
so that we can find lines with large fonts (but small line height).

Test: fast/multicol/simple-line-layout-line-index-after-strut.html

* rendering/SimpleLineLayoutResolver.cpp:
(WebCore::SimpleLineLayout::RunResolver::adjustLineIndexForStruts):
(WebCore::SimpleLineLayout::RunResolver::lineIndexForHeight):
(WebCore::SimpleLineLayout::RunResolver::rangeForRect):
* rendering/SimpleLineLayoutResolver.h:

LayoutTests:

* fast/multicol/simple-line-layout-line-index-after-strut-expected.html: Added.
* fast/multicol/simple-line-layout-line-index-after-strut.html: Added.


Canonical link: https://commits.webkit.org/186526@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213779 268f45cc-cd09-0410-ab3c-d52691b4dbfc